Make sure overlay does not overflow DataGrid

--- a/components/datagrid/HeaderRowOverlay/theme.css
+++ b/components/datagrid/HeaderRowOverlay/theme.css
@@ -7,6 +7,7 @@
   left: 48px;
   right: 0;
   height: 48px;
+  overflow-x: auto;
   z-index: 3;
 }
 
